# cass-cdc-pg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
config/dev/: .env.example
docker/cassandra/: Dockerfile  cassandra-driver.conf  debezium-cassandra.properties  enable-cdc.sh  init-schema.cql  start-debezium-agent.sh
docker/connectors/: cassandra-source.json  deploy-connectors.sh  postgres-sink.json
docker/debezium-server/config/: application.properties
docker/monitoring/: prometheus-alerts.yml  prometheus.yml
docker/monitoring/grafana/dashboards/: cdc-pipeline.json  reconciliation.json
docker/postgres/: Dockerfile  init-db.sql
docker/vault/policies/: cdc-policy.hcl
docs/: API_MISSING_FEATURES_ANALYSIS.md  CASSANDRA_CDC_CONNECTOR_FINDINGS.md  ENFORCEMENT-SUMMARY.md  architecture.md  deployment-checklist.md  git-hooks-enforcement.md  reconciliation-quickstart.md  reconciliation.md  troubleshooting.md
docs/adr/: 001-use-debezium-for-cdc.md
docs/runbooks/: connector-failure.md  high-consumer-lag.md  schema-mismatch.md  vault-sealed.md
helm/: .helmignore  Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: README-benchmark.md  benchmark.py  generate_test_data.py  health-check-cassandra.sh  health-check-kafka-connect.sh  health-check-kafka.sh  health-check-postgres.sh  health-check-vault.sh  setup-git-hooks.sh  setup_local_env.sh
specs/001-cass-cdc-pg/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cass-cdc-pg/checklists/: requirements.md
specs/001-cass-cdc-pg/contracts/: kafka-topics.md  reconciliation-api.md  rest-api.md
specs/001-cass-cdc-pg/contracts/api/: admin-api.yaml
src/api/: main.py
src/api/routes/: dlq.py  gdpr.py  health.py  metrics.py  reconciliation.py
src/config/: logging_config.py  settings.py  tls_config.py
src/connectors/transforms/: timestamp_conflict_resolver.py
src/middleware/: __init__.py  rate_limit.py  request_id.py
src/models/: __init__.py  change_event.py  checkpoint.py  dlq_record.py  reconciliation_job.py  reconciliation_mismatch.py  schema_metadata.py
src/monitoring/: health_check.py  metrics.py  tracing.py
src/repositories/: base.py  cassandra_repository.py  postgresql_repository.py  reconciliation_repository.py  vault_repository.py
src/services/: alert_service.py  dlq_service.py  reconciliation_engine.py  reconciliation_scheduler.py  schema_service.py  type_mapper.py
src/utils/: circuit_breaker.py  retry.py  validators.py
tests/: conftest.py
tests/contract/: test_change_event_schema.py  test_health_api.py  test_kafka_topics.py  test_metrics_api.py
tests/integration/: conftest.py  test_cassandra_to_kafka.py  test_checkpoint_resume.py  test_crash_recovery.py  test_credential_rotation.py  test_dlq_replay.py  test_dlq_routing.py  test_docker_health.py  test_end_to_end_replication.py  test_kafka_to_postgres.py  test_logging.py  test_no_secrets_in_logs.py  test_out_of_order_events.py  test_reconciliation_alerts.py  test_reconciliation_checksum.py  test_reconciliation_metrics.py  test_reconciliation_row_count.py  test_reconciliation_scheduled.py  test_resource_limits.py  test_retry_logic.py  test_schema_add_column.py  test_schema_drop_column.py  test_schema_incompatible.py  test_schema_type_change.py  test_tracing.py  test_ttl_preservation.py  test_vault_credentials.py
(+2 files in other folders)
