[tool.poetry]
name = "cass-cdc-pg"
version = "0.1.0"
description = "Change Data Capture pipeline from Cassandra to PostgreSQL"
authors = ["CDC Team <cdc@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Kafka and Debezium
kafka-python = "^2.0.2"
confluent-kafka = "^2.3.0"
# Database drivers
cassandra-driver = "^3.29.0"
psycopg2-binary = "^2.9.9"
# Data validation and configuration
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
# HashiCorp Vault
hvac = "^2.1.0"
# Logging and monitoring
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation = "^0.42b0"
opentelemetry-exporter-jaeger = "^1.21.0"
# Error handling and retry
tenacity = "^8.2.3"
# FastAPI for REST API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
# Scheduling
apscheduler = "^3.10.4"
# Testing data generation
faker = "^22.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.1"
# Code quality
ruff = "^0.1.9"
black = "^23.12.1"
mypy = "^1.8.0"
# Security
bandit = "^1.7.6"
safety = "^2.3.5"
# Pre-commit hooks
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S104",  # possible binding to all interfaces
    "S108",  # probable insecure usage of temp file/directory
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded passwords allowed in tests
    "S106",  # hardcoded passwords allowed in tests
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*", "**/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
